--- a/index.html
+++ b/index.html
@@ -3803,7 +3803,7 @@
   </div>
 
   <!-- КАЮТА -->
-  <div class="nav-item" id="cabinet-nav-item">
+  <div class="nav-item" id="cabin-nav-item">
     <div style="display: flex; flex-direction: column; align-items: center;">
       <svg class="icon-glow" width="40" height="40" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" fill="none">
         <path d="M24 20 Q24 14 32 14 Q40 14 40 20" stroke="currentColor" stroke-width="2" fill="none" />
@@ -4723,7 +4723,7 @@ function updateActiveNav(activeItem) {
 }
 
 // Обработчики для навигации
-document.getElementById('cabinet-nav-item').addEventListener('click', function(e) {
+document.getElementById('cabin-nav-item').addEventListener('click', function(e) {
   e.preventDefault();
   showPage(cabinetPage);
   updateActiveNav(this);
